[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprite/PlayerSprite/Idle1.tres" type="Texture" id=1]
[ext_resource path="res://Nodes/Widget/CharacterCard.gd" type="Script" id=2]

[node name="CharacterCard" type="Control"]
margin_top = 239.0
margin_right = 350.0
margin_bottom = 739.0
rect_min_size = Vector2( 350, 500 )
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 4
color = Color( 0.890196, 0.411765, 0.337255, 0.282353 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
mouse_filter = 2

[node name="CharacterNameLabel" type="Label" parent="Background/VBoxContainer"]
unique_name_in_owner = true
margin_right = 280.0
margin_bottom = 14.0
text = "Character Name"
align = 1

[node name="CharacterTexture" type="TextureRect" parent="Background/VBoxContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 280.0
margin_bottom = 430.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[connection signal="gui_input" from="." to="." method="_on_CharacterCard_gui_input"]
